@@ -5,7 +5,7 @@ Date: 2021-11-11
 Authors@R: c(
     person(given = "Nick", family = "Borcherding", role = c("aut", "cre"), email = "ncborch@gmail.com"),
     person(given = "Drew", family = "Voigt", role = c("aut"), email = "drewvoigt@gmail.com"))
-Description: Implementation of the Trex algorithm for single cell embedding based on TCR sequences. Package includes standalone function to calculate multilayered network from a variety of TCR metrics and interaction with SingleCellExperiment or Seurat data objects. 
+Description: Implementation of the Trex algorithm for single-cell embedding based on TCR sequences. The package includes a standalone function to calculate multilayered networks from a variety of TCR metrics and interaction with SingleCellExperiment or Seurat data objects. 
 License: Apache License 2.0
 Encoding: UTF-8
 LazyData: true
@@ -25,7 +25,8 @@ Imports: igraph,
 	keras,
 	tensorflow,
 	reticulate, 
-	bluster
+	bluster,
+	BiocParallel
 Suggests: 
 	knitr, 
 	rmarkdown, 
