@@ -224,7 +224,7 @@ quietTCRgenes <- function(sc) {
 #' Cluster clones using the Trex dimensional reductions
 #' 
 #' Use this to return clusters for clonotypes based on 
-#' the \link[bluster]{bluster} clustering paramaters.
+#' the \link[bluster]{bluster} clustering parameters.
 #' 
 #' @examples
 #' \dontrun{
@@ -232,11 +232,13 @@ quietTCRgenes <- function(sc) {
 #'                       reduction.name = NULL, 
 #'                       cluster.parameter = NNGraphParam())
 #' }
-#' @param sc Single Cell Object in Seurat or SingleCell Experiment format
+#' @param sc Single Cell Object in Seurat or SingleCell Experiment format. In addition, the outputs of distReduction()
+#' and aaReduction() can be used.
 #' @param reduction.name Name of the dimensional reduction output from runTrex()
 #' @param cluster.parameter The community detection algorithm in \link[bluster]{bluster}
 #' @param ... For the generic, further arguments to pass to specific methods.
 #' @importFrom bluster clusterRows NNGraphParam HclustParam KmeansParam KNNGraphParam PamParam SNNGraphParam SomParam
+#' @importFrom igraph simplify spectrum graph_from_edgelist `E<-`
 #' @export
 #' @return Single-Cell Object with trex.clusters in the meta.data
 clonalCommunity <- function(sc, 
@@ -246,11 +248,39 @@ clonalCommunity <- function(sc,
     if (inherits(x=sc, what ="Seurat")) { 
         dim.red <- sc[[reduction.name]] 
         dim.red <- dim.red@cell.embeddings
-    } else {
+    } else if (inherits(x=sc, what ="SingleCellExperiment")){
         dim.red <- reducedDim(sc, reduction.name)
+    } else {
+        if(inherits(x=sc, what ="dist")) {
+            mat <- sc
+            #mat[is.na(mat)] <- 0
+            dimension <- attr(mat, "Size")
+            edge <- NULL
+            for (j in seq_len(dimension)[-1]) {
+                row <- dist.convert(mat,j)
+                tmp.edge <- data.frame("from" = j, "to" = seq_len(j)[-j], weight = row)
+                edge <- rbind(edge, tmp.edge)
+            }
+            edge <- na.omit(edge)
+            g <- graph.edgelist(as.matrix(edge[,c(1,2)]), directed = FALSE)
+            E(g)$weights <- edge$weight
+            g <- simplify(g)
+            eigen <- spectrum(g, 
+                              which = list(howmany = 30), 
+                              algorithm = "arpack")
+            dim.red <- eigen$vectors
+        } else {
+            dim.red <- sc
+        }
     }
-    clusters <- clusterRows(dim.red, BLUSPARAM=cluster.parameter)
+    set.seed(42)
+    clusters <- SupressWarnings(clusterRows(dim.red, BLUSPARAM=cluster.parameter))
     clus.df <- data.frame("trex.clusters" = paste0("trex.", clusters))
-    rownames(clus.df) <- rownames(dim.red)
-    sc <- add.meta.data(sc, clus.df, colnames(clus.df))
+    if (inherits(x=sc, what ="Seurat") | inherits(x=sc, what ="SingleCellExperiment")) {
+        rownames(clus.df) <- rownames(dim.red)
+        sc <- add.meta.data(sc, clus.df, colnames(clus.df))
+        return(sc)
+    } 
+    return(clus.df)
+    
 }
